kafka/kafka-traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
  namespace: kafka
spec:
  clusterIP: None
  selector:
    app: kafka
  ports:
    - name: internal
      port: 9092
    - name: controller
      port: 9093
    - name: plaintext-bootstrap
      port: 9094

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-0-external
  namespace: kafka
spec:
  type: ClusterIP
  selector:
    app: kafka
    statefulset.kubernetes.io/pod-name: kafka-0
  ports:
    - name: external
      port: 9092
      targetPort: 9095

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-1-external
  namespace: kafka
spec:
  type: ClusterIP
  selector:
    app: kafka
    statefulset.kubernetes.io/pod-name: kafka-1
  ports:
    - name: external
      port: 9092
      targetPort: 9095

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-2-external
  namespace: kafka
spec:
  type: ClusterIP
  selector:
    app: kafka
    statefulset.kubernetes.io/pod-name: kafka-2
  ports:
    - name: external
      port: 9092
      targetPort: 9095

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kafka-0-tcp
  namespace: kafka
spec:
  entryPoints:
    - kafka-0
  routes:
    - match: HostSNI(`*`)
      services:
        - name: kafka-0-external
          port: 9092

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kafka-1-tcp
  namespace: kafka
spec:
  entryPoints:
    - kafka-1
  routes:
    - match: HostSNI(`*`)
      services:
        - name: kafka-1-external
          port: 9092

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kafka-2-tcp
  namespace: kafka
spec:
  entryPoints:
    - kafka-2
  routes:
    - match: HostSNI(`*`)
      services:
        - name: kafka-2-external
          port: 9092
